--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:description" content="We buy & we sell collectibles and consumer goods. Houston, TX.">
   <meta property="og:url" content="https://trading.forsqaholdings.com/">
   <!-- Replace with a hosted image URL after deploy -->
-  <meta property="og:image" content="">
+  <meta property="og:image" content="https://ibb.co/chFrGbtB">
   <meta name="twitter:card" content="summary_large_image">
 
   <style>
@@ -125,26 +125,9 @@
 <body>
   <header class="hero container">
     <span class="kicker">Forsqa Holdings Family</span>
-    <!-- Inline SVG wordmark to avoid external assets -->
-    <div class="logo-wrap" aria-hidden="true">
-      <svg class="logo" viewBox="0 0 1200 300" role="img">
-        <title>Forsqa Trading LLC</title>
-        <defs>
-          <linearGradient id="g1" x1="0" x2="1">
-            <stop offset="0" stop-color="#1e40af"/><stop offset="1" stop-color="#3b82f6"/>
-          </linearGradient>
-        </defs>
-        <g fill="url(#g1)">
-          <!-- Main title -->
-          <text x="50" y="120" font-size="96" font-weight="800" letter-spacing="4" fill="#dbeafe">FORS</text>
-          <text x="390" y="120" font-size="96" font-weight="800" letter-spacing="4" fill="#dbeafe">Q</text>
-          <!-- Accent slash on Q -->
-          <rect x="458" y="72" width="58" height="16" rx="8" fill="#3b82f6" transform="rotate(38 458 72)"></rect>
-          <text x="460" y="120" font-size="96" font-weight="800" letter-spacing="4" fill="#dbeafe">A</text>
-          <text x="50" y="200" font-size="56" font-weight="700" letter-spacing="6" fill="#93c5fd">TRADING</text>
-          <text x="50" y="250" font-size="36" font-weight="700" letter-spacing="10" fill="#60a5fa">LLC</text>
-        </g>
-      </svg>
+    <!-- External logo image -->
+    <div class="logo-wrap">
+      <img class="logo" src="https://ibb.co/chFrGbtB" alt="Forsqa Trading LLC logo">
     </div>
     <h1>Wholesale &amp; resale of collectibles and consumer goods</h1>
     <p class="tag">Houston, Texas • We buy &amp; we sell</p>
