--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:description" content="We buy & we sell collectibles and consumer goods. Houston, TX.">
   <meta property="og:url" content="https://trading.forsqaholdings.com/">
   <!-- Replace with a hosted image URL after deploy -->
-  <meta property="og:image" content="https://ibb.co/chFrGbtB">
+  <meta property="og:image" content="https://i.ibb.co/chFrGbtB/chFrGbtB.png">
   <meta name="twitter:card" content="summary_large_image">
 
   <style>
@@ -127,7 +127,7 @@
     <span class="kicker">Forsqa Holdings Family</span>
     <!-- External logo image -->
     <div class="logo-wrap">
-      <img class="logo" src="https://ibb.co/chFrGbtB" alt="Forsqa Trading LLC logo">
+      <img class="logo" src="https://i.ibb.co/chFrGbtB/chFrGbtB.png" alt="Forsqa Trading LLC logo" loading="lazy">
     </div>
     <h1>Wholesale &amp; resale of collectibles and consumer goods</h1>
     <p class="tag">Houston, Texas • We buy &amp; we sell</p>
