--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <meta property="og:title" content="Forsqa Trading LLC — Wholesale & Resale">
   <meta property="og:description" content="We buy & we sell collectibles and consumer goods. Houston, TX.">
   <meta property="og:url" content="https://trading.forsqaholdings.com/">
-  <!-- Replace with a hosted image URL after deploy -->
-  <meta property="og:image" content="https://i.ibb.co/chFrGbtB/chFrGbtB.png">
+  <!-- Use local logo image file in the workspace -->
+  <meta property="og:image" content="ChatGPT%20Image%20Nov%201%2C%202025%2C%2010_56_38%20AM.png">
   <meta name="twitter:card" content="summary_large_image">
 
   <style>
@@ -125,9 +125,9 @@
 <body>
   <header class="hero container">
     <span class="kicker">Forsqa Holdings Family</span>
-    <!-- External logo image -->
+    <!-- Local logo image (workspace file) -->
     <div class="logo-wrap">
-      <img class="logo" src="https://i.ibb.co/chFrGbtB/chFrGbtB.png" alt="Forsqa Trading LLC logo" loading="lazy">
+      <img class="logo" src="ChatGPT%20Image%20Nov%201%2C%202025%2C%2010_56_38%20AM.png" alt="Forsqa Trading LLC logo" loading="lazy">
     </div>
     <h1>Wholesale &amp; resale of collectibles and consumer goods</h1>
     <p class="tag">Houston, Texas • We buy &amp; we sell</p>
